--- a/Direction_Finding/child_image/hci_ipc.conf
+++ b/Direction_Finding/child_image/hci_ipc.conf
@@ -1,30 +1,10 @@
 #
-# Copyright (c) 2021 Nordic Semiconductor ASA
+# Copyright (c) 2022 Nordic Semiconductor ASA
 #
-# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
+# SPDX-License-Identifier: Apache-2.0
 #
 
-# Reguired to enable BT_BUF_CMD_TX_SIZE for LE Set Extended Advertising Data command
-CONFIG_BT_EXT_ADV=y
-
-CONFIG_BT_CTLR=y
-CONFIG_BT_LL_SW_SPLIT=y
-
-CONFIG_BT_CTLR_ADV_EXT=y
-CONFIG_BT_CTLR_ADV_PERIODIC=y
-
-# Enable Direction Finding Feature including AoA and AoD
-CONFIG_BT_CTLR_DF=y
-
-# Disable Direction Finding Rx mode
-CONFIG_BT_CTLR_DF_SCAN_CTE_RX=n
-CONFIG_BT_CTLR_DF_ANT_SWITCH_RX=n
-CONFIG_BT_CTLR_DF_CTE_RX=n
-
-# Limit number of possible connection to decrease memory usage
-CONFIG_BT_MAX_CONN=1
-
-# Enable chaining of multiple CTEs in periodic advertising
-CONFIG_BT_CTLR_ADVANCED_FEATURES=y
-CONFIG_BT_CTLR_ADV_SYNC_PDU_BACK2BACK=y
-CONFIG_BT_CTLR_DF_PER_ADV_CTE_NUM_MAX=16
+# Disable AoD Feature (antenna switching) in Tx mode in Controller and Host
+OVERLAY_CONFIG=y 
+CONFIG_BT_CTLR_DF_ANT_SWITCH_TX=n
+CONFIG_BT_DF_CTE_TX_AOD=n
